# MemoBuild

./: .env.example  .gitignore  CI_CD_INTEGRATION.md  Cargo.toml  Dockerfile.farm  Dockerfile.server  Makefile  P0_COMPLETION_SUMMARY.md  PROJECT_REVIEW.md  README.md  SECURITY.md  TODO.md  build.rs  demo.sh  demo_cluster.sh  demo_distributed.sh  docker-compose.prod.yml
.github/workflows/: ci.yml  docker.yml  extension-release.yml  release.yml
benches/: core_bench.rs
charts/memobuild/: Chart.yaml  values.yaml
charts/memobuild/templates/: _helpers.tpl  deployment.yaml
deploy/k8s/certs/: certificates.yaml
deploy/k8s/crds/: memobuildcluster.yaml
deploy/k8s/manifests/: pdb-hpa-network.yaml
deploy/k8s/policy/: sigstore-policy.yaml
docs/: ADR-001-EXTENSION-SYSTEM.md  ADR-002-OPENAPI.md  API_CHANGELOG.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DISTRIBUTED_BUILD_SYSTEM_SUMMARY.md  EXTENSION_BUILD_AND_USAGE.md  PERFORMANCE_TUNING.md  PRODUCTION_ROADMAP.md  QUICK_START_DISTRIBUTED.md  README.md  RELEASE_NOTES.md  SCALABILITY_TESTING.md  SCALING.md  TROUBLESHOOTING.md  VISION.md  WHITEPAPER.md
docs/development/: PROJECT_REVIEW.md
docs/guides/: QUICK_REFERENCE.md
docs/releases/: CHANGELOG.md  P0_PRODUCTION_CONTAINERIZATION_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md
examples/: README.md  build_farm_demo.rs  dag_verification.rs  full_farm_test.sh  load_test_runner.rs  test_extensions.sh  test_remote_inputs.sh
examples/ai-demo/: Dockerfile.ai  main.js  package.json  utils.js
examples/go-microservice/: Dockerfile  README.md  go.mod  main.go
examples/monorepo/: README.md
examples/monorepo/api/: Dockerfile  api.js  package.json
examples/monorepo/ui/: Dockerfile  package.json  ui.js
examples/nodejs-app/: Dockerfile  index.js  package.json
examples/python-multi-stage/: Dockerfile  README.md  main.py
examples/rust-app/: Cargo.toml  Dockerfile
examples/rust-app/src/: main.rs
extension/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  metadata.json
extension/backend/: go.mod  go.sum  main.go
extension/ui/: package-lock.json  package.json
extension/ui/src/: App.tsx
monitoring/grafana/dashboards/: memobuild-cluster.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
proto/memobuild/v1/: execution.proto
scripts/: security-audit.sh  start-prod-stack.sh
scripts/db/: init.sql
src/: audit.rs  auth.rs  auto_scaling.rs  cache.rs  cache_cluster.rs  cache_redis.rs  cache_utils.rs  cluster_server.rs  constants.rs  core.rs  error.rs  executor.rs  gc.rs  graph.rs  index.js  lib.rs  loadtest.rs  logging.rs  main.rs  metrics.rs  remote_cache.rs  sbom.rs  scalable_db.rs  secrets.rs  slsa.rs  tls.rs  tracing.rs  verify.rs
src/ai/: ast.rs  ci.rs  mod.rs  optimizer.rs
src/cache/: cluster.rs  http.rs  hybrid.rs  local.rs  metadata.rs  remote.rs  utils.rs
src/common/: mod.rs
src/dashboard/: dag_ws.rs  metrics.rs  mod.rs
src/docker/: dag.rs  mod.rs  parser.rs
src/docker/extensions/: executor.rs  mod.rs  parser.rs
src/execution/: executor.rs
src/export/: config.rs  layer.rs  manifest.rs  mod.rs  oci_exporter.rs  registry.rs  utils.rs
src/hasher/: ignore.rs  walker.rs
src/network/: cluster_server.rs  mod.rs  scaling.rs
src/oci/: mod.rs  registry.rs
src/operator/: controller.rs  crd.rs  mod.rs
src/remote_exec/: client.rs  grpc_server.rs  mod.rs  reapi.rs  scheduler.rs  server.rs  worker.rs  worker_pool.rs  worker_server.rs
src/remote_router/: health.rs  mod.rs  region.rs  router.rs
src/reproducible/: normalize.rs
src/sandbox/: containerd.rs  local.rs  mod.rs  spec.rs
src/secrets/: aws.rs
src/server/: metadata.rs  mod.rs  storage.rs
src/slsa/: in_toto.rs
src/storage/: gcs.rs  local.rs  mod.rs  s3.rs
tests/: cache_and_core_test.rs  e2e_test.rs  error_handling_test.rs  executor_coverage_test.rs  reproducibility_test.rs  scalability_test.rs
