[package]
name = "memobuild"
version = "0.1.3"
edition = "2021"
description = "A high-performance incremental build system with smart caching and OCI image support"
license = "MIT"
repository = "https://github.com/nrelab/MemoBuild"
homepage = "https://github.com/nrelab/MemoBuild"
keywords = ["build-system", "caching", "docker", "incremental", "oci"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
blake3 = "1"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
anyhow = "1"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
futures = "0.3"
axum = { version = "0.6.20", features = ["http1", "http2", "json", "ws"], optional = true }
tower-http = { version = "0.4", features = ["fs", "trace"], optional = true }
rusqlite = { version = "0.29", features = ["bundled"], optional = true }
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
async-trait = "0.1"
oci-spec = "0.6"
containerd-client = { version = "0.4", optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }

[features]
default = []
server = ["axum", "tower-http", "rusqlite"]
containerd = ["containerd-client", "tonic", "prost", "prost-types"]

[dev-dependencies]
tempfile = "3"
