[package]
name = "memobuild"
version = "0.2.0"
edition = "2021"
description = "A high-performance incremental build system with smart caching and OCI image support"
license = "MIT"
repository = "https://github.com/nrelab/MemoBuild"
homepage = "https://github.com/nrelab/MemoBuild"
keywords = ["build-system", "caching", "docker", "incremental", "oci"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
blake3 = "1"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
anyhow = "1"
thiserror = "1"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
futures = "0.3"
axum = { version = "0.6.20", features = ["http1", "http2", "json", "ws"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tar = "0.4"
flate2 = "1.0"
async-trait = "0.1"
oci-spec = "0.6"
containerd-client = { version = "0.4", optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.11", optional = true }
prost-types = { version = "0.11", optional = true }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

colored = "3.1.1"
indicatif = "0.18.4"
clap_complete = "4.5.66"

[features]
default = []
server = []
containerd = ["containerd-client", "tonic", "prost", "prost-types"]
remote-exec = ["tonic", "prost", "prost-types"]

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "core_bench"
harness = false
